kubernetes/postfix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postfix-deployment
  namespace: pychat
  labels:
    app: postfix
spec:
  selector:
    matchLabels:
      app: postfix
  replicas: 1
  template:
    metadata:
      labels:
        app: postfix
    spec:
      volumes:
        - name: pychat-postfix-tls
          secret:
            secretName: pychat-tls
            items:
              - key: tls.crt
                path: crt.pem
              - key: tls.key
                path: key.pem
      containers:
        - name: postfix
          imagePullPolicy: Always
          image: deathangel908/pychat-postfix
          volumeMounts:
          - name: pychat-postfix-tls
            mountPath: "/etc/tls"
            readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  name: postfix-service
  namespace: pychat
spec:
  selector:
    app: postfix
  ports:
    - protocol: TCP
      port: 25
      name: smtp-tls
      targetPort: 25
