kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
  name: ingress
  namespace: pychat
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - pychat.org
    secretName: pychat-tls
  - hosts:
    - static.pychat.org
    secretName: pychat-tls
  defaultBackend:
    service:
      name: frontend-service
      port:
        number: 80
  rules:
  - host: static.pychat.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  - host: pychat.org
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8888
      - path: /ws
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8888
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
